# server/docs/openapi.yaml
@@ -1,211 +1,128 @@
 openapi: 3.1.0
-x-stoplight:
-  id: 1y9es20qiy75t
 info:
   title: todo-schema-driven
-  version: '1.0'
-  summary: todo app
-servers:
-  - url: 'http://localhost:18080'
-    description: ''
+  description: ""
+  version: 1.0.0
+tags:
+  - name: Todo
 paths:
   /todo:
-    post:
-      tags:
-        - TODOの登録
-      description: TODOを登録する
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/TodoInformation'
-      responses:
-        '201':
-          description: TODOの登録完了
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/TodoId'
-        '400':
-          description: リクエスト不正
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/TodoOpeError'
-        '500':
-          description: システム内で異常が発生し正常にリクエストが処理できなかった場合
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/TodoOpeError'
-      operationId: create-todo
     get:
+      summary: Search
+      deprecated: false
+      description: ""
       tags:
-        - TODOの取得
-      description: TODOの一覧を取得する
-      parameters:
-        - in: query
-          name: todo_id
-          schema:
-            type: integer
-            format: int32
-        - in: query
-          name: offset
-          schema:
-            type: integer
-            format: int32
-        - in: query
-          name: limit
-          schema:
-            type: integer
-            format: int32
+        - Todo
+      parameters: []
       responses:
-        '200':
-          description: TODO情報
+        "200":
+          description: ""
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/TodoInformation'
-        '400':
-          description: リクエスト不正
+                $ref: "#/components/schemas/TodoBase"
+          headers: {}
+        "400":
+          description: ""
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/TodoOpeError'
-        '500':
-          description: システム内で異常が発生し正常にリクエストが処理できなかった場合
+                type: object
+                properties: {}
+          headers: {}
+        "500":
+          description: ""
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/TodoOpeError'
-      operationId: get-todo
-  '/todo/{todo_id}':
-    patch:
-      parameters:
-        - in: path
-          required: true
-          name: todo_id
-          schema:
-            type: integer
-            format: int32
-      tags:
-        - TODOを更新
-      description: TODOを更新する
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/TodoInformation'
-      responses:
-        '204':
-          description: TODO更新成功
-        '400':
-          description: リクエスト不正
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/TodoOpeError'
-        '404':
-          description: 更新対象のリソースが存在しない
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/TodoOpeError'
-        '500':
-          description: システム内で異常が発生し正常にリクエストが処理できなかった場合
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/TodoOpeError'
-      summary: Update a Todo
-      operationId: update-todo
-    delete:
-      parameters:
-        - in: path
-          required: true
-          name: todo_id
-          schema:
-            type: integer
-            format: int32
-      tags:
-        - TODOを削除
-      description: TODOを削除する
-      responses:
-        '200':
-          description: TODOの削除成功
-        '400':
-          description: リクエスト不正
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/TodoOpeError'
-        '404':
-          description: 削除対象のリソースが存在しない
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/TodoOpeError'
-        '500':
-          description: システム内で異常が発生し正常にリクエストが処理できなかった場合
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/TodoOpeError'
-      operationId: delete-todo
+                $ref: "#/components/schemas/ErrorResponse"
+          headers: {}
+      security: []
 components:
   schemas:
-    TodoInformation:
+    TodoBase:
       type: object
       properties:
+        id:
+          type: integer
         title:
           type: string
-          minLength: 1
-          maxLength: 100
-          description: TODOの件名
-          example: todo追加
-        detail:
+        description:
           type: string
-          maxLength: 300
-          description: TODOの詳細
-          example: todoを追加します
-        progress:
-          type: integer
-          format: int32
-          minimum: 0
-          maximum: 100
-          description: TODOの進捗率
-          example: 50
-        start_date:
+        start_at:
           type: string
-          format: date
-          description: 開始予定日
-        end_date:
+          format: date-time
+        end_at:
           type: string
-          format: date
-          description: 終了予定日
+          format: date-time
+          x-nullable: true
+        priority:
+          $ref: "#/components/schemas/Priority"
+        status:
+          $ref: "#/components/schemas/TodoStatus"
       required:
+        - id
         - title
-        - progress
-      title: ''
-    TodoId:
+        - description
+        - start_at
+        - priority
+        - status
+    Priority:
       type: object
       properties:
-        todo_id:
-          type: integer
-          format: int32
-          description: TODOの登録番号
-          example: 1
-    TodoOpeError:
-      type: object
-      properties:
-        error_code:
-          type: number
-          description: エラーコード
-          example: 201
-        error_message:
+        name:
           type: string
-          description: エラーメッセージ
-          example: error message.
+        label:
+          type: string
+        color:
+          type: string
+        bgColor:
+          type: string
+      required:
+        - name
+        - label
+        - color
+        - bgColor
+    TodoStatus:
+      type: object
+      properties:
+        name:
+          type: string
+        label:
+          type: string
+        color:
+          type: string
+        bgColor:
+          type: string
+      required:
+        - name
+        - label
+        - color
+        - bgColor
+    ErrorResponse:
+      type: object
+      properties:
+        globalErrors:
+          type: array
+          items:
+            type: string
+        fieldErrors:
+          type: array
+          items:
+            type: object
+            properties:
+              field:
+                type: string
+              messages:
+                type: array
+                items:
+                  type: string
+            required:
+              - field
+              - messages
+      required:
+        - globalErrors
+        - fieldErrors
+  securitySchemes: {}
+servers: []
 
